Fix HTML structure and update image source

--- a/002.html
+++ b/002.html
@@ -14,9 +14,10 @@
 <body>
     <div class="glass-box">
         <h1>🍜 台式紅燒牛肉麵</h1>
-        <img src="https://images.unsplash.com/photo-1591814448473-7f47c215c1c0?auto=format&fit=crop&w=800" alt="牛肉麵">
+        <img src="001.png" alt="牛肉麵">
         <p>這道牛肉麵選用頂級牛腱肉，搭配大量牛骨與數十種辛香料熬製 12 小時而成。湯頭溫潤不油膩，麵條吸滿了精華，是台灣最具代表性的靈魂美食。</p>
         <a href="index.html" class="back-btn">返回首頁</a>
     </div>
 </body>
+
 </html>
