Fix HTML structure and update image source

--- a/003.html
+++ b/003.html
@@ -36,9 +36,10 @@
 <body>
     <div class="glass-box">
         <h1>🍰 法式草莓千層</h1>
-        <img src="https://images.unsplash.com/photo-1488477181946-6428a0291777?auto=format&fit=crop&w=800" alt="草莓千層">
+        <img src="002.png" alt="草莓千層">
         <p>每一層酥皮都經過 72 小時的低溫發酵與反覆摺疊，搭配大溪地香草奶油與當季嚴選草莓。入口即化的酸甜滋味，是午後最奢華的享受。</p>
         <a href="index.html" class="back-btn">⬅ 返回首頁探索更多</a>
     </div>
 </body>
+
 </html>
