Fix HTML structure and update image source

--- a/004.html
+++ b/004.html
@@ -38,9 +38,10 @@
 <body>
     <div class="glass-box">
         <h1>🍣 日式特選握壽司</h1>
-        <img src="https://images.unsplash.com/photo-1579871494447-9811cf80d66c?auto=format&fit=crop&w=800" alt="壽司">
+        <img src="003.png" alt="壽司">
         <p>強調食材原始的鮮甜，由職人精確掌握醋飯與魚片的溫度。當季鮮魚從築地市場直送，每一口都能感受到海洋與大地的恩賜。</p>
         <a href="index.html" class="back-btn">⬅ 返回首頁</a>
     </div>
 </body>
+
 </html>
