--- a/index.html
+++ b/index.html
@@ -19,11 +19,13 @@
     <header>
         <h1>🍴 怡瑄的美食探險紀錄</h1>
         <p>品味人生，從每一口美味開始</p>
+        <p>班級：進修四技餐飲3A</p>
+        <p>學號：91234136</p>
     </header>
 
     <div class="container">
         <a href="2nd.html" class="card">
-            <img src="https://images.unsplash.com/photo-1591814448473-7f47c215c1c0?auto=format&fit=crop&w=600" alt="牛肉麵">
+            <img src="001.png" alt="牛肉麵">
             <div class="card-content">
                 <h3>台式紅燒牛肉麵</h3>
                 <p>慢火熬煮的濃厚湯頭與鮮美肉質</p>
@@ -31,7 +33,7 @@
         </a>
 
         <a href="3rd.html" class="card">
-            <img src="https://images.unsplash.com/photo-1488477181946-6428a0291777?auto=format&fit=crop&w=600" alt="甜點">
+            <img src="002.png" alt="甜點">
             <div class="card-content">
                 <h3>法式草莓千層</h3>
                 <p>如雲朵般輕盈的鮮奶油與酸甜果香</p>
@@ -39,7 +41,7 @@
         </a>
 
         <a href="4th.html" class="card">
-            <img src="https://images.unsplash.com/photo-1579871494447-9811cf80d66c?auto=format&fit=crop&w=600" alt="壽司">
+            <img src="003.png" alt="壽司">
             <div class="card-content">
                 <h3>日式特選握壽司</h3>
                 <p>職人手感的溫度，食材最純粹的甘甜</p>
@@ -55,4 +57,5 @@
         </a>
     </div>
 </body>
+
 </html>
