Fix HTML entity encoding in index.html

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </header>
 
     <div class="container">
-        <a href="2nd.html" class="card">
+        <a href="002.html" class="card">
             <img src="001.png" alt="牛肉麵">
             <div class="card-content">
                 <h3>台式紅燒牛肉麵</h3>
@@ -32,7 +32,7 @@
             </div>
         </a>
 
-        <a href="3rd.html" class="card">
+        <a href="003.html" class="card">
             <img src="002.png" alt="甜點">
             <div class="card-content">
                 <h3>法式草莓千層</h3>
@@ -40,7 +40,7 @@
             </div>
         </a>
 
-        <a href="4th.html" class="card">
+        <a href="004.html" class="card">
             <img src="003.png" alt="壽司">
             <div class="card-content">
                 <h3>日式特選握壽司</h3>
@@ -48,7 +48,7 @@
             </div>
         </a>
 
-        <a href="5th.html" class="card reflection-card">
+        <a href="005.html" class="card reflection-card">
             <div class="card-content">
                 <h2 style="font-size: 50px; margin: 0;">📝</h2>
                 <h3>學習心得專區</h3>
@@ -59,3 +59,4 @@
 </body>
 
 </html>
+
